# platform-external-libselinux

./: Makefile.am  configure.ac
src/: android.c  enabled.c  init.c
